# python_fix_explainer

./: .gitignore  LICENSE  README.md  bytecode_metadata.py  edit_script.py  end_to_end.py  gen_edit_script.py  get_runtime_effects.py  manip_ast.py  map_asts.py  map_bytecode.py  muast.py  pyproject.toml  runtime_comparison.py  rutime_comparison.py  simplify.py
src/python_fix_explainer/: __init__.py  bytecode_metadata.py  doctest_data.py  end_to_end.py  gen_edit_script.py  get_runtime_effects.py  interface_funcs.py  map_asts.py  map_bytecode.py  muast.py  runtime_comparison.py  simplify.py  tree_to_html.py
test/: sample.py
tests/: sample.py  test.py
