[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_fix_explainer"
version = "0.0.9"
authors = [
  { name="Yana Malysheva", email="kuziavra@gmail.com" },
]
description = "Generate fixes for incorrect python code, given data about the problem being solved"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "apted>=1.0.3",
    "astor>=0.8.1",
    "bytecode>=0.12.0",
    "networkx>=2.5",
    "asttokens>=2.0.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yanamal/python_fix_explainer/"
